--- a/src/pages/specifications.mdx
+++ b/src/pages/specifications.mdx
@@ -14,7 +14,7 @@ import { Callout } from 'nextra/components';
   <Tabs.Tab>
     <div className="mt-6">
       <div className="flex items-center gap-2 mb-6">
-        <span className="w-2 h-2 rounded-full bg-green-500"></span>
+        <span className="w-2 h-2 rounded-full bg-green-500 animate-[pulse_3s_ease-in-out_infinite]"></span>
         <span className="text-gray-600">Recommended for most use cases</span>
       </div>
       
@@ -172,7 +172,7 @@ import { Callout } from 'nextra/components';
   <Tabs.Tab>
     <div className="mt-6">
       <div className="flex items-center gap-2 mb-6">
-        <span className="w-2 h-2 rounded-full bg-blue-500"></span>
+        <span className="w-2 h-2 rounded-full bg-blue-500 animate-[pulse_3s_ease-in-out_infinite]"></span>
         <span className="text-gray-600">Optimized for edge devices</span>
       </div>
       
