--- a/src/pages/specifications.mdx
+++ b/src/pages/specifications.mdx
@@ -592,106 +592,108 @@ import { Callout } from 'nextra/components';
 <Tabs items={['2B Models', '0.5B Models']}>
 	<Tabs.Tab>
 		<div className='bg-white rounded-lg border border-gray-200 p-6 mt-6'>
-			<div className='overflow-x-auto'>
-				<table className='min-w-full'>
-					<thead>
-						<tr className='border-b-0 border-gray-200'>
-							<th className='text-left py-2 px-4 font-semibold text-gray-700'>Release</th>
-							<th className='text-right py-2 px-4 font-semibold text-gray-700'>VQAv2</th>
-							<th className='text-right py-2 px-4 font-semibold text-gray-700'>GQA</th>
-							<th className='text-right py-2 px-4 font-semibold text-gray-700'>TextVQA</th>
-							<th className='text-right py-2 px-4 font-semibold text-gray-700'>DocVQA</th>
-							<th className='text-right py-2 px-4 font-semibold text-gray-700'>TallyQA</th>
-							<th className='text-right py-2 px-4 font-semibold text-gray-700'>POPE</th>
-						</tr>
-						<tr className='border-b border-gray-200'>
-							<th className='text-left py-1 px-4'></th>
-							<th className='text-right py-1 px-4'></th>
-							<th className='text-right py-1 px-4'></th>
-							<th className='text-right py-1 px-4'></th>
-							<th className='text-right py-1 px-4'></th>
-							<th className='text-right py-1 px-4 text-xs text-gray-600'>(simple/full)</th>
-							<th className='text-right py-1 px-4 text-xs text-gray-600'>(rand/pop/adv)</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr className='border-b border-gray-200 bg-green-50'>
-							<td className='py-3 px-4'>
-								<div className='font-medium'>2024-08-26</div>
-								<div className='text-xs text-gray-500'>latest</div>
-							</td>
-							<td className='text-right py-3 px-4 font-mono'>80.3</td>
-							<td className='text-right py-3 px-4 font-mono'>64.3</td>
-							<td className='text-right py-3 px-4 font-mono'>65.2</td>
-							<td className='text-right py-3 px-4 font-mono'>70.5</td>
-							<td className='text-right py-3 px-4 font-mono'>82.6 / 77.6</td>
-							<td className='text-right py-3 px-4 font-mono'>89.6 / 88.8 / 87.2</td>
-						</tr>
-						<tr className='border-b border-gray-200'>
-							<td className='py-3 px-4'>2024-07-23</td>
-							<td className='text-right py-3 px-4 font-mono'>79.4</td>
-							<td className='text-right py-3 px-4 font-mono'>64.9</td>
-							<td className='text-right py-3 px-4 font-mono'>60.2</td>
-							<td className='text-right py-3 px-4 font-mono'>61.9</td>
-							<td className='text-right py-3 px-4 font-mono'>82.0 / 76.8</td>
-							<td className='text-right py-3 px-4 font-mono'>91.3 / 89.7 / 86.9</td>
-						</tr>
-						<tr className='border-b border-gray-200'>
-							<td className='py-3 px-4'>2024-05-20</td>
-							<td className='text-right py-3 px-4 font-mono'>79.4</td>
-							<td className='text-right py-3 px-4 font-mono'>63.1</td>
-							<td className='text-right py-3 px-4 font-mono'>57.2</td>
-							<td className='text-right py-3 px-4 font-mono'>30.5</td>
-							<td className='text-right py-3 px-4 font-mono'>82.1 / 76.6</td>
-							<td className='text-right py-3 px-4 font-mono'>91.5 / 89.6 / 86.2</td>
-						</tr>
-						<tr className='border-b border-gray-200'>
-							<td className='py-3 px-4'>2024-05-08</td>
-							<td className='text-right py-3 px-4 font-mono'>79.0</td>
-							<td className='text-right py-3 px-4 font-mono'>62.7</td>
-							<td className='text-right py-3 px-4 font-mono'>53.1</td>
-							<td className='text-right py-3 px-4 font-mono'>30.5</td>
-							<td className='text-right py-3 px-4 font-mono'>81.6 / 76.1</td>
-							<td className='text-right py-3 px-4 font-mono'>90.6 / 88.3 / 85.0</td>
-						</tr>
-						<tr className='border-b border-gray-200'>
-							<td className='py-3 px-4'>2024-04-02</td>
-							<td className='text-right py-3 px-4 font-mono'>77.7</td>
-							<td className='text-right py-3 px-4 font-mono'>61.7</td>
-							<td className='text-right py-3 px-4 font-mono'>49.7</td>
-							<td className='text-right py-3 px-4 font-mono'>24.3</td>
-							<td className='text-right py-3 px-4 font-mono'>80.1 / 74.2</td>
-							<td className='text-right py-3 px-4 font-mono text-gray-400'>-</td>
-						</tr>
-						<tr className='border-b border-gray-200'>
-							<td className='py-3 px-4'>2024-03-13</td>
-							<td className='text-right py-3 px-4 font-mono'>76.8</td>
-							<td className='text-right py-3 px-4 font-mono'>60.6</td>
-							<td className='text-right py-3 px-4 font-mono'>46.4</td>
-							<td className='text-right py-3 px-4 font-mono'>22.2</td>
-							<td className='text-right py-3 px-4 font-mono'>79.6 / 73.3</td>
-							<td className='text-right py-3 px-4 font-mono text-gray-400'>-</td>
-						</tr>
-						<tr className='border-b border-gray-200'>
-							<td className='py-3 px-4'>2024-03-06</td>
-							<td className='text-right py-3 px-4 font-mono'>75.4</td>
-							<td className='text-right py-3 px-4 font-mono'>59.8</td>
-							<td className='text-right py-3 px-4 font-mono'>43.1</td>
-							<td className='text-right py-3 px-4 font-mono'>20.9</td>
-							<td className='text-right py-3 px-4 font-mono'>79.5 / 73.2</td>
-							<td className='text-right py-3 px-4 font-mono text-gray-400'>-</td>
-						</tr>
-						<tr className='border-b border-gray-200'>
-							<td className='py-3 px-4'>2024-03-04</td>
-							<td className='text-right py-3 px-4 font-mono'>74.2</td>
-							<td className='text-right py-3 px-4 font-mono'>58.5</td>
-							<td className='text-right py-3 px-4 font-mono'>36.4</td>
-							<td className='text-right py-3 px-4 font-mono text-gray-400'>-</td>
-							<td className='text-right py-3 px-4 font-mono text-gray-400'>-</td>
-							<td className='text-right py-3 px-4 font-mono text-gray-400'>-</td>
-						</tr>
-					</tbody>
-				</table>
+			<div className='overflow-x-auto -mx-6 px-6' style={{ WebkitOverflowScrolling: 'touch' }}>
+				<div className='min-w-[800px]'>
+					<table className='w-full'>
+						<thead>
+							<tr className='border-b-0 border-gray-200'>
+								<th className='text-left py-2 px-4 font-semibold text-gray-700'>Release</th>
+								<th className='text-right py-2 px-4 font-semibold text-gray-700'>VQAv2</th>
+								<th className='text-right py-2 px-4 font-semibold text-gray-700'>GQA</th>
+								<th className='text-right py-2 px-4 font-semibold text-gray-700'>TextVQA</th>
+								<th className='text-right py-2 px-4 font-semibold text-gray-700'>DocVQA</th>
+								<th className='text-right py-2 px-4 font-semibold text-gray-700'>TallyQA</th>
+								<th className='text-right py-2 px-4 font-semibold text-gray-700'>POPE</th>
+							</tr>
+							<tr className='border-b border-gray-200'>
+								<th className='text-left py-1 px-4'></th>
+								<th className='text-right py-1 px-4'></th>
+								<th className='text-right py-1 px-4'></th>
+								<th className='text-right py-1 px-4'></th>
+								<th className='text-right py-1 px-4'></th>
+								<th className='text-right py-1 px-4 text-xs text-gray-600'>(simple/full)</th>
+								<th className='text-right py-1 px-4 text-xs text-gray-600'>(rand/pop/adv)</th>
+							</tr>
+						</thead>
+						<tbody>
+							<tr className='border-b border-gray-200 bg-green-50'>
+								<td className='py-3 px-4'>
+									<div className='font-medium'>2024-08-26</div>
+									<div className='text-xs text-gray-500'>latest</div>
+								</td>
+								<td className='text-right py-3 px-4 font-mono'>80.3</td>
+								<td className='text-right py-3 px-4 font-mono'>64.3</td>
+								<td className='text-right py-3 px-4 font-mono'>65.2</td>
+								<td className='text-right py-3 px-4 font-mono'>70.5</td>
+								<td className='text-right py-3 px-4 font-mono'>82.6 / 77.6</td>
+								<td className='text-right py-3 px-4 font-mono'>89.6 / 88.8 / 87.2</td>
+							</tr>
+							<tr className='border-b border-gray-200'>
+								<td className='py-3 px-4'>2024-07-23</td>
+								<td className='text-right py-3 px-4 font-mono'>79.4</td>
+								<td className='text-right py-3 px-4 font-mono'>64.9</td>
+								<td className='text-right py-3 px-4 font-mono'>60.2</td>
+								<td className='text-right py-3 px-4 font-mono'>61.9</td>
+								<td className='text-right py-3 px-4 font-mono'>82.0 / 76.8</td>
+								<td className='text-right py-3 px-4 font-mono'>91.3 / 89.7 / 86.9</td>
+							</tr>
+							<tr className='border-b border-gray-200'>
+								<td className='py-3 px-4'>2024-05-20</td>
+								<td className='text-right py-3 px-4 font-mono'>79.4</td>
+								<td className='text-right py-3 px-4 font-mono'>63.1</td>
+								<td className='text-right py-3 px-4 font-mono'>57.2</td>
+								<td className='text-right py-3 px-4 font-mono'>30.5</td>
+								<td className='text-right py-3 px-4 font-mono'>82.1 / 76.6</td>
+								<td className='text-right py-3 px-4 font-mono'>91.5 / 89.6 / 86.2</td>
+							</tr>
+							<tr className='border-b border-gray-200'>
+								<td className='py-3 px-4'>2024-05-08</td>
+								<td className='text-right py-3 px-4 font-mono'>79.0</td>
+								<td className='text-right py-3 px-4 font-mono'>62.7</td>
+								<td className='text-right py-3 px-4 font-mono'>53.1</td>
+								<td className='text-right py-3 px-4 font-mono'>30.5</td>
+								<td className='text-right py-3 px-4 font-mono'>81.6 / 76.1</td>
+								<td className='text-right py-3 px-4 font-mono'>90.6 / 88.3 / 85.0</td>
+							</tr>
+							<tr className='border-b border-gray-200'>
+								<td className='py-3 px-4'>2024-04-02</td>
+								<td className='text-right py-3 px-4 font-mono'>77.7</td>
+								<td className='text-right py-3 px-4 font-mono'>61.7</td>
+								<td className='text-right py-3 px-4 font-mono'>49.7</td>
+								<td className='text-right py-3 px-4 font-mono'>24.3</td>
+								<td className='text-right py-3 px-4 font-mono'>80.1 / 74.2</td>
+								<td className='text-right py-3 px-4 font-mono text-gray-400'>-</td>
+							</tr>
+							<tr className='border-b border-gray-200'>
+								<td className='py-3 px-4'>2024-03-13</td>
+								<td className='text-right py-3 px-4 font-mono'>76.8</td>
+								<td className='text-right py-3 px-4 font-mono'>60.6</td>
+								<td className='text-right py-3 px-4 font-mono'>46.4</td>
+								<td className='text-right py-3 px-4 font-mono'>22.2</td>
+								<td className='text-right py-3 px-4 font-mono'>79.6 / 73.3</td>
+								<td className='text-right py-3 px-4 font-mono text-gray-400'>-</td>
+							</tr>
+							<tr className='border-b border-gray-200'>
+								<td className='py-3 px-4'>2024-03-06</td>
+								<td className='text-right py-3 px-4 font-mono'>75.4</td>
+								<td className='text-right py-3 px-4 font-mono'>59.8</td>
+								<td className='text-right py-3 px-4 font-mono'>43.1</td>
+								<td className='text-right py-3 px-4 font-mono'>20.9</td>
+								<td className='text-right py-3 px-4 font-mono'>79.5 / 73.2</td>
+								<td className='text-right py-3 px-4 font-mono text-gray-400'>-</td>
+							</tr>
+							<tr className='border-b border-gray-200'>
+								<td className='py-3 px-4'>2024-03-04</td>
+								<td className='text-right py-3 px-4 font-mono'>74.2</td>
+								<td className='text-right py-3 px-4 font-mono'>58.5</td>
+								<td className='text-right py-3 px-4 font-mono'>36.4</td>
+								<td className='text-right py-3 px-4 font-mono text-gray-400'>-</td>
+								<td className='text-right py-3 px-4 font-mono text-gray-400'>-</td>
+								<td className='text-right py-3 px-4 font-mono text-gray-400'>-</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 			</div>
 			<div className='mt-4 text-sm text-gray-600'>
 				<h4 className='font-medium mb-2'>Benchmark Details:</h4>
