--- a/src/pages/cloud/detect.mdx
+++ b/src/pages/cloud/detect.mdx
@@ -2,10 +2,38 @@ import { Tabs } from 'nextra/components'
 import { Callout } from 'nextra/components'
 import Head from 'next/head'
 
-# /point
+# /detect
 
 <Head>
+  <title>/detect - Moondream Documentation</title>
+  <meta name="description" content="Learn how to use Moondream's object detection capabilities to identify and locate objects in images. Complete guide with Python and Node.js examples." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="color-scheme" content="light" />
+  
+  {/* Open Graph */}
+  <meta property="og:title" content="/detect - Moondream Documentation" />
+  <meta property="og:description" content="Learn how to use Moondream's object detection capabilities to identify and locate objects in images. Complete guide with Python and Node.js examples." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://docs.moondream.ai/cloud/detect" />
+  
+  
+  {/* Twitter */}
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="/detect - Moondream Documentation" />
+  <meta name="twitter:description" content="Learn how to use Moondream's object detection capabilities to identify and locate objects in images. Complete guide with Python and Node.js examples." />
+  
+  
+  {/* Schema.org for Google */}
+  <script type="application/ld+json">
+    {JSON.stringify({
+      "@context": "https://schema.org",
+      "@type": "TechArticle",
+      "headline": "Moondream Object Detection Documentation",
+      "description": "Technical guide for using Moondream's object detection capabilities",
+      "articleSection": "Documentation",
+      "keywords": "object detection, computer vision, image analysis, moondream"
+    })}
+  </script>
 </Head>
 
 Get coordinates for objects in images.
