--- a/src/pages/cloud/query.mdx
+++ b/src/pages/cloud/query.mdx
@@ -5,7 +5,35 @@ import Head from 'next/head'
 # /query
 
 <Head>
+  <title>/query - Moondream Documentation</title>
+  <meta name="description" content="Learn how to use Moondream's visual question answering capabilities to ask questions about images and get natural language answers. Complete guide with Python and Node.js examples." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="color-scheme" content="light" />
+  
+  {/* Open Graph */}
+  <meta property="og:title" content="/query - Moondream Documentation" />
+  <meta property="og:description" content="Learn how to use Moondream's visual question answering capabilities to ask questions about images and get natural language answers. Complete guide with Python and Node.js examples." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://docs.moondream.ai/cloud/query" />
+  
+  
+  {/* Twitter */}
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="/query - Moondream Documentation" />
+  <meta name="twitter:description" content="Learn how to use Moondream's visual question answering capabilities to ask questions about images and get natural language answers. Complete guide with Python and Node.js examples." />
+  
+  
+  {/* Schema.org for Google */}
+  <script type="application/ld+json">
+    {JSON.stringify({
+      "@context": "https://schema.org",
+      "@type": "TechArticle",
+      "headline": "Moondream Visual Question Answering Documentation",
+      "description": "Technical guide for using Moondream's visual question answering capabilities",
+      "articleSection": "Documentation",
+      "keywords": "visual question answering, VQA, computer vision, image analysis, moondream"
+    })}
+  </script>
 </Head>
 
 Ask questions about images and get natural language answers.
