--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -1,5 +1,45 @@
 import EndpointCard from '../components/EndpointCard';
 import { Callout } from 'nextra/components';
+import Head from 'next/head'
+
+<Head>
+  <title>Overview - Moondream Documentation</title>
+  <meta name="description" content="Moondream is a lightweight, open-source vision AI model that brings powerful image understanding capabilities to your applications. Perfect for image analysis, object detection, and visual reasoning." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="author" content="Parsa Khazaeepoul" />
+  <link rel="icon" href="/favicon.ico" />
+  <link rel="canonical" href="https://docs.moondream.ai" />
+  
+  {/* Open Graph */}
+  <meta property="og:title" content="Moondream - Open Source Vision AI for Image Understanding" />
+  <meta property="og:description" content="Moondream is a lightweight, open-source vision AI model that brings powerful image understanding capabilities to your applications. Perfect for image analysis, object detection, and visual reasoning." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://docs.moondream.ai" />
+  
+  
+  {/* Twitter */}
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Moondream - Open Source Vision AI for Image Understanding" />
+  <meta name="twitter:description" content="Moondream is a lightweight, open-source vision AI model that brings powerful image understanding capabilities to your applications. Perfect for image analysis, object detection, and visual reasoning." />
+  
+  
+  {/* Schema.org for Google */}
+  <script type="application/ld+json">
+    {JSON.stringify({
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "Moondream",
+      "description": "Open source vision AI model for image understanding and analysis",
+      "applicationCategory": "DeveloperApplication",
+      "operatingSystem": "Any",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "USD"
+      }
+    })}
+  </script>
+</Head>
 
 # Build with Moondream
 
