--- a/src/pages/recipes.mdx
+++ b/src/pages/recipes.mdx
@@ -1,4 +1,36 @@
+import Head from 'next/head'
 import Recipe from '../components/Recipe';
+
+<Head>
+  <title>Recipes - Moondream Documentation</title>
+  <meta name="description" content="Explore practical examples, optimization tips, and best practices for implementing Moondream vision AI in your applications. Learn from real-world use cases and implementation patterns." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  
+  {/* Open Graph */}
+  <meta property="og:title" content="Moondream Recipes - Best Practices & Real-World Examples" />
+  <meta property="og:description" content="Explore practical examples, optimization tips, and best practices for implementing Moondream vision AI in your applications. Learn from real-world use cases and implementation patterns." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://docs.moondream.ai/recipes" />
+  
+  
+  {/* Twitter */}
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Moondream Recipes - Best Practices & Real-World Examples" />
+  <meta name="twitter:description" content="Explore practical examples, optimization tips, and best practices for implementing Moondream vision AI in your applications. Learn from real-world use cases and implementation patterns." />
+  
+  
+  {/* Schema.org for Google */}
+  <script type="application/ld+json">
+    {JSON.stringify({
+      "@context": "https://schema.org",
+      "@type": "TechArticle",
+      "headline": "Moondream Vision AI Implementation Recipes",
+      "description": "Collection of best practices and real-world examples for Moondream vision AI",
+      "articleSection": "Technical Documentation",
+      "keywords": "vision AI, implementation patterns, best practices, optimization, examples"
+    })}
+  </script>
+</Head>
 
 # Recipes
 
