--- a/src/pages/specifications.mdx
+++ b/src/pages/specifications.mdx
@@ -1,5 +1,37 @@
+import Head from 'next/head'
 import { Tabs } from 'nextra/components';
 import { Callout } from 'nextra/components';
+
+<Head>
+  <title>Specifications - Moondream Documentation</title>
+  <meta name="description" content="Detailed technical specifications for Moondream vision AI, including model downloads, memory requirements, performance benchmarks, and hardware recommendations." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  
+  {/* Open Graph */}
+  <meta property="og:title" content="Moondream Technical Specifications - Model Details & Performance" />
+  <meta property="og:description" content="Detailed technical specifications for Moondream vision AI, including model architecture, memory requirements, performance benchmarks, and hardware recommendations." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://docs.moondream.ai/specifications" />
+  
+  
+  {/* Twitter */}
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Moondream Technical Specifications - Model Details & Performance" />
+  <meta name="twitter:description" content="Detailed technical specifications for Moondream vision AI, including model architecture, memory requirements, performance benchmarks, and hardware recommendations." />
+  
+  
+  {/* Schema.org for Google */}
+  <script type="application/ld+json">
+    {JSON.stringify({
+      "@context": "https://schema.org",
+      "@type": "TechArticle",
+      "headline": "Moondream Vision AI Technical Specifications",
+      "description": "Comprehensive technical details and performance metrics for Moondream",
+      "articleSection": "Technical Documentation",
+      "keywords": "model architecture, memory requirements, performance benchmarks, hardware specifications, technical details"
+    })}
+  </script>
+</Head>
 
 # Technical Specifications
 
