--- a/src/pages/cloud/point.mdx
+++ b/src/pages/cloud/point.mdx
@@ -5,7 +5,35 @@ import Head from 'next/head'
 # /point
 
 <Head>
+  <title>/point - Moondream Documentation</title>
+  <meta name="description" content="Learn how to use Moondream's visual pointing capabilities to locate specific objects or regions in images. Complete guide with Python and Node.js examples." />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="color-scheme" content="light" />
+  
+  {/* Open Graph */}
+  <meta property="og:title" content="/point - Moondream Documentation" />
+  <meta property="og:description" content="Learn how to use Moondream's visual pointing capabilities to locate specific objects or regions in images. Complete guide with Python and Node.js examples." />
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://docs.moondream.ai/cloud/point" />
+  
+  
+  {/* Twitter */}
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="/point - Moondream Documentation" />
+  <meta name="twitter:description" content="Learn how to use Moondream's visual pointing capabilities to locate specific objects or regions in images. Complete guide with Python and Node.js examples." />
+  
+  
+  {/* Schema.org for Google */}
+  <script type="application/ld+json">
+    {JSON.stringify({
+      "@context": "https://schema.org",
+      "@type": "TechArticle",
+      "headline": "Moondream Visual Pointing Documentation",
+      "description": "Technical guide for using Moondream's visual pointing capabilities",
+      "articleSection": "Documentation",
+      "keywords": "visual pointing, object localization, computer vision, image analysis, moondream"
+    })}
+  </script>
 </Head>
 
 Locate specific objects or regions in images by getting their coordinates.
