--- a/src/pages/cloud/caption.mdx
+++ b/src/pages/cloud/caption.mdx
@@ -16,12 +16,10 @@ import Head from 'next/head'
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://docs.moondream.ai/cloud/caption" />
   
-  
   {/* Twitter */}
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="/caption - Moondream Documentation" />
   <meta name="twitter:description" content="Learn how to use Moondream's image captioning capabilities to generate natural language descriptions of images. Complete guide with Python and Node.js examples." />
-  
   
   {/* Schema.org for Google */}
   <script type="application/ld+json">
@@ -36,16 +34,16 @@ import Head from 'next/head'
   </script>
 </Head>
 
-Get coordinates for objects in images.
+Generate natural language descriptions of images.
 
 ## Quick Start
 
 First, install the package:
 
-<Tabs items={['Python', 'Node.js']}>
+<Tabs items={['Python', 'Node.js', 'cURL']}>
   <Tabs.Tab>
 ~~~bash
-pip install moondream
+pip install moondream pillow
 ~~~
   </Tabs.Tab>
   <Tabs.Tab>
@@ -53,138 +51,79 @@ pip install moondream
 npm install moondream
 ~~~
   </Tabs.Tab>
+  <Tabs.Tab>
+~~~bash
+# No installation needed
+~~~
+  </Tabs.Tab>
 </Tabs>
 
 Place an image file in your working directory, then:
 
-<Tabs items={['Python', 'Node.js']}>
+<Tabs items={['Python', 'Node.js', 'cURL']}>
   <Tabs.Tab>
 ~~~python
 import moondream as md
 from PIL import Image
 
+# Initialize with API key
 model = md.vl(api_key="your-api-key")
 
-# Load an image (supports PIL.Image, numpy arrays, or file paths)
-image = Image.open("image.jpg")
+# Load an image
+image = Image.open("path/to/image.jpg")
 
-# Returns list of coordinates
-points = model.point(image, "cat")
-print(points)
-# [
-#   {
-#     "x": 0.5,  # Normalized coordinates (0-1)
-#     "y": 0.7   # Point location
-#   },
-#   ...
-# ]
+# Generate a caption
+caption = model.caption(image)["caption"]
+print("Caption:", caption)
+
+# Stream the response
+for chunk in model.caption(image, stream=True)["caption"]:
+    print(chunk, end="", flush=True)
 ~~~
   </Tabs.Tab>
   <Tabs.Tab>
 ~~~typescript
 import { vl } from "moondream";
-import fs from 'fs';
+import fs from "fs";
 
-const model = new vl({
-  apiKey: "your-api-key" 
-});
+const model = new vl({ apiKey: "your-api-key" });
+const image = fs.readFileSync("path/to/image.jpg");
 
-// Load image (supports Buffer or Base64EncodedImage: { imageUrl: string })
-const image = fs.readFileSync('./image.jpg');
+async function main() {
+  // Regular response
+  const caption = await model.caption({
+    image,
+    length: "normal"
+  });
+  console.log(caption);
 
-// Returns Promise<Array<{x: number, y: number}>>
-const points = await model.point(image, "cat");
-console.log(points);
+  // Streamed response
+  const stream = await model.caption({
+    image,
+    length: "normal",
+    stream: true
+  });
+  for await (const chunk of stream.caption) process.stdout.write(chunk);
+}
+
+main();
 ~~~
   </Tabs.Tab>
-</Tabs>
-
-## Direct API Access
-
-<Tabs items={['cURL', 'Python', 'Node.js']}>
   <Tabs.Tab>
 ~~~bash
-# Convert image to base64
-IMAGE_BASE64=$(base64 -i ./image.jpg)
-
-# Make API request
-curl -X POST https://api.moondream.ai/v1/point \
-  -H "Content-Type: application/json" \
-  -H "X-Moondream-Auth: $MOONDREAM_API_KEY" \
-  -d "{
-    \"image_url\": \"data:image/jpeg;base64,$IMAGE_BASE64\",
-    \"object\": \"cat\"
-  }"
-~~~
-  </Tabs.Tab>
-  <Tabs.Tab>
-~~~python
-import os
-from urllib.request import Request, urlopen
-import json
-import base64
-
-def get_base64_image(image_path):
-    with open(image_path, "rb") as f:
-        return base64.b64encode(f.read()).decode()
-
-image_base64 = get_base64_image("./image.jpg")
-data = {
-    "image_url": f"data:image/jpeg;base64,{image_base64}",
-    "object": "cat"
-}
-
-headers = {
-    "X-Moondream-Auth": os.getenv("MOONDREAM_API_KEY"),
-    "Content-Type": "application/json"
-}
-
-req = Request(
-    "https://api.moondream.ai/v1/point",
-    data=json.dumps(data).encode(),
-    headers=headers,
-    method="POST"
-)
-
-with urlopen(req) as response:
-    result = json.loads(response.read())
-    print(result["result"])
-~~~
-  </Tabs.Tab>
-  <Tabs.Tab>
-~~~javascript
-import fs from 'fs';
-
-async function pointToObject() {
-  try {
-    const imageBuffer = fs.readFileSync('./image.jpg');
-    const imageBase64 = imageBuffer.toString('base64');
-
-    const response = await fetch('https://api.moondream.ai/v1/point', {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json',
-        'X-Moondream-Auth': process.env.MOONDREAM_API_KEY
-      },
-      body: JSON.stringify({
-        image_url: `data:image/jpeg;base64,${imageBase64}`,
-        object: "cat"
-      })
-    });
-
-    const data = await response.json();
-    console.log(data.result);
-  } catch (error) {
-    console.error('Error:', error);
-  }
-}
-
-pointToObject();
+curl --location 'https://api.moondream.ai/v1/caption' \
+--header 'X-Moondream-Auth: <API KEY FROM console.moondream.ai>' \
+--header 'Content-Type: application/json' \
+--data '{
+    "image_url": "data:image/jpeg;base64,<BASE64-STRING>",
+    "length": "long",
+    "stream": false
+}'
 ~~~
   </Tabs.Tab>
 </Tabs>
 
 <Callout type="info">
-  The examples above show both client library usage and direct API access patterns. The client libraries provide the simplest integration, while direct API access offers more control.
+  The client libraries provide the simplest integration for working with the Moondream API.
 </Callout>
 
