nit, remove old files, cleanup, geist font

--- a/src/pages/cloud/query.mdx
+++ b/src/pages/cloud/query.mdx
@@ -42,7 +42,7 @@ Ask questions about images and get natural language answers.
 
 First, install the package:
 
-<Tabs items={['Python', 'Node.js', 'Python OpenAI Compatible', 'Node.js OpenAI Compatible', 'cURL']}>
+<Tabs items={['Python', 'Node.js', 'Python (OpenAI)', 'Node.js (OpenAI)', 'cURL']}>
   <Tabs.Tab>
 ~~~bash
 pip install moondream pillow
